@@ -641,3 +641,4 @@ m4_include(tests/t_drop_vs_patch_rename.at)
 m4_include(tests/t_unreadable_MT.at)
 m4_include(tests/t_cvsimport3.at)
 m4_include(tests/t_commit_message_file.at)
+m4_include(tests/t_automate_attributes.at)
