@@ -1,3 +1,12 @@
+2005-05-13  Joel Reed  <joelwreed@comcast.com>
+
+	* automate.cc: add automate attributes command
+	* commands.cc: add attributes subcommand helptext
+	* contrib/monotone.zsh_completion: use automate attributes
+	for completion of monotone attr and cleanup ignore files code
+	* tests/t_automate_attributes.at: add testcase
+	* testsuite.at: include new testcaes
+
 2005-05-13  Jon Bright  <jon@siliconcircus.com>
 	* testsuite.at (UNGZ): Change the way the ungzipping works on
 	Win32, in the hope that test 206 will no longer be given invalid
